--- a/0829/0829.md
+++ b/0829/0829.md
@@ -2,7 +2,7 @@
 
 ## Shallow copy vs Deep copy
 
-### Default copy constructor
+### Default / Shallow copy constructor
 
     + memberwise copy
     + Each data member is copied from the source object
@@ -10,3 +10,8 @@
     + **Problem : when we release the storage in the destructor, the other object still refer to the released storage !**
 
 
+### Deep copy
+
+    + Create a copy of the pointed-to data
+    + Each copy will have a pointer to unique storage in the heap
+    + Deep copy when you have a raw pointer as a class data member
